--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.17",
+    "@jsverse/transloco": "^8.2.1",
     "bootstrap": "^5.3.8",
     "express": "^4.18.2",
     "remixicon": "^4.8.0",
